fixed an issue where the loading icon was visible all the time on small publication lists

--- a/bibsonomy-webapp/src/main/webapp/resources/jquery/plugins/infinite-scroll-pagination/css/scrollpagination.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/jquery/plugins/infinite-scroll-pagination/css/scrollpagination.css
@@ -36,6 +36,7 @@
 	height: 120px;
 	padding: 10px 0;
 	text-align: center;
+	display: none;
 }
 
 .cust-spinner {
